# process-automation

./: .gitignore  DATABRICKS_SETUP.md  DATASCRAPING_GUIDE.md  LICENSE  README.md  SAP_RECORDING_GUIDE.md  WEBSCRAPING_GUIDE.md  pyproject.toml  test_imports.py
.github/workflows/: publish.yml
functions/: excel_macro.py  sap_extract.py  sharepoint_upload.py
process_automation/: __init__.py  databricks_extract.py  excel_macro.py  sap_bw_mdx_export.py  sap_connection.py  sap_debug.py  sap_extract.py  sap_rfc_connection.py  sap_rfc_export.py  sharepoint_upload.py  web_scrape.py
templates/: template_databricks_pipeline.py  template_excel_macro.py  template_sap_bw_mdx_export.py  template_sap_debug.py  template_sap_pipeline.py  template_sap_rfc_export.py  template_sap_rfc_schema.py  template_sharepoint_upload.py  template_web_scrape.py
tools/: check_transactions.bat  check_transactions.py
