[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "process-automation"
version = "1.1.0"
description = "Automate SAP data extraction (GUI and RFC), SharePoint upload, and Excel macro execution"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Mircea Sava Ioan"}]
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "xlwings",
    "pywin32",
    "psutil",
    "openpyxl",
    "databricks-sql-connector",
    "playwright",
]

[tool.setuptools.packages.find]
include = ["process_automation*"]
exclude = ["templates*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.bat"]

[project.optional-dependencies]
dev = ["build", "twine"]
